Font Family global

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,3 +16,7 @@
 // automatically applied to the <body> element in the app.
 
 @import '../theme/fonts';
+
+* {
+  font-family: '8bit' !important;
+}
