--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,23 @@
 page-home {
-
+  h1, h2 {
+    color: white;
+  }
+  .game {
+    background-image: url('../assets/imgs/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+  }
+  .center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  .btn-space {
+    width: 13vh;
+    height: 13vh;
+  }
 }
