--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -20,4 +20,74 @@ page-home {
     width: 13vh;
     height: 13vh;
   }
+  .table {
+    width: 100%;
+  }
+  @media screen and (min-width: 550px) {
+    .table {
+      width: 70%;
+    }
+  }
+  @media screen and (min-width: 850px) {
+    .table {
+      width: 60%;
+    }
+  }
+
+
+
+
+
+  // @media screen and (min-width: 320px) and (max-height: 567px) {
+  //   .table {
+  //     width: 320px;
+  //   }
+  // }
+  // @media screen and (min-width: 320px) and (min-height: 567px) {
+  //   .table {
+  //     width: 380px;
+  //   }
+  // }
+  // @media screen and (max-width: 510px) and (min-height: 568px) {
+  //   .table {
+  //     width: 380px;
+  //   }
+  // }
+  // // Styles for player
+  // @media screen and (min-height: 296px) {
+  //   .y-player {
+  //     background: url('../assets/imgs/players.png');
+  //     background-position: right bottom;
+  //     background-size: cover;
+  //     height: 8vh;
+  //     width: 100%;
+  //   }
+  //   .btn-space {
+  //     padding: 8px
+  //   }
+  // }
+  // @media screen and (min-height: 350px) {
+  //   .y-player {
+  //     background: url('../assets/imgs/players.png');
+  //     background-position: right bottom;
+  //     background-size: cover;
+  //     height: 9vh;
+  //     width: 100%;
+  //   }
+  //   .btn-space {
+  //     padding: 8px
+  //   }
+  // }
+  // @media screen and (min-height: 418px) {
+  //   .y-player {
+  //     background: url('../assets/imgs/players.png');
+  //     background-position: right bottom;
+  //     background-size: cover;
+  //     height: 10vh;
+  //     width: 100%;
+  //   }
+  //   .btn-space {
+  //     padding: 8px
+  //   }
+  // }
 }
