--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,3 +20,20 @@
 * {
   font-family: '8bit' !important;
 }
+h1, h2 {
+  color: white;
+}
+.game {
+  background-image: url('../assets/imgs/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
