--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,6 +2,11 @@ page-home {
   .btn-space {
     width: 13vh;
     height: 13vh;
+    background-color: #f4f4f4;
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .table {
     width: 100%;
