--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: '8bit';
-  src: url('../assets/fonts/8bit.ttf');
+  src: url('../assets/8bit.ttf');
   font-weight: normal;
   font-style: normal;
 }
