--- a/src/pages/start/start.scss
+++ b/src/pages/start/start.scss
@@ -7,7 +7,10 @@ page-start {
     margin-top: 15vh;
     margin-bottom: 16px;
   }
-  [ion-button] {
+  .two-players-btn {
     margin-top: 15vh;
+  }
+  .ia-btn {
+    margin-top: 16px;
   }
 }
